Fixes for cropped warning icon
Adds padding for warning icon in labels

Closes-Bug: #1572176

--- a/static/styles/main.less
+++ b/static/styles/main.less
@@ -4098,6 +4098,9 @@ input[type=range] {
         align-items: center;
         min-height: 30px;
         padding-top: 0;
+        .glyphicon {
+          padding-right: 15px;
+        }
       }
       .field-list > div {
         clear: left;
